--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,6 +10,10 @@ html {
   top: 5.3125rem; /* To offset for fixed header. */
 }
 
+.banner {
+  background-image: url(../images/banner-landingpage.jpg);
+}
+
 .center {
   text-align: center;
 }
@@ -42,12 +46,16 @@ header {
   border-bottom: solid 1px #c6c1c1;
   background-color: white;
   z-index: 5;
+ 
+ 
 }
 
 header .content {
   display: flex;
   align-items: center;
   padding: 1.875rem;
+ 
+
 }
 
 header .logo {
@@ -115,8 +123,7 @@ header .mobile {
 
 #sign-up-section {
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
+  align-items: center;
   height: 43.5rem;
 }
 
@@ -125,6 +132,7 @@ header .mobile {
   border: solid 1px #979797;
   border-radius: 4px;
   background-color: #9dc20b;
+  margin-left: 6.25rem;
 }
 
 #sign-up-cta .content {
@@ -212,25 +220,28 @@ header .mobile {
 
 #features-section {
   display: flex;
-  justify-content: space-between;
-  padding: 4rem 5%;
+  padding: 4rem ;
   background-color: #f3f3f3;
 }
 
 .feature {
-  flex: 1;
+  flex: 1 1;
   padding: 2rem;
-  margin: 0px 1.25rem;
+  margin: 1.1875rem;
   background-color: white;
 }
 
-.feature .image-container {
-  width: 90%;
+.feature .image-container img{
+  width: 100%;
   height: 65%;
   margin: 0 auto;
+  padding: 0 !important;;
 }
 
+
+
 .feature h2 {
+  margin-top: 2.5rem;
   padding-bottom: .5rem;
   font-size: 2.25rem;
   font-weight: bold;
