--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -32,7 +32,7 @@ html {
   display: block;
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (max-width: 450px) {
   .main-content {
     top: 2.5625rem;
   }
@@ -46,20 +46,18 @@ header {
   border-bottom: solid 1px #c6c1c1;
   background-color: white;
   z-index: 5;
- 
- 
 }
 
 header .content {
   display: flex;
   align-items: center;
   padding: 1.875rem;
- 
-
 }
 
 header .logo {
   flex: 1;
+  font-size: 1.5rem;
+  font-family: "Roboto Mono", monospace;
 }
 
 header nav ul {
@@ -79,14 +77,33 @@ nav a {
 
 header .icon {
   width: 1rem;
-  padding-left: .75rem;
+  padding-left: 0.75rem;
 }
 
 header .mobile {
   display: none;
 }
 
+header .tablet {
+  display: none;
+}
+
 @media only screen and (max-width: 760px) {
+  header .tablet {
+    display: block;
+    border-radius: 4px;
+    margin-left: 1.5rem;
+    padding: 0.1875rem 0.5rem;
+    background-color: #9dc20b;
+    line-height: 1.6;
+  }
+
+  header .tablet a {
+    color: white;
+  }
+}
+
+@media only screen and (max-width: 727px) {
   header .desktop {
     display: none;
   }
@@ -97,7 +114,8 @@ header .mobile {
   }
 
   header .content {
-    padding: .5rem 0;
+    padding: 0;
+    height: 3rem;
   }
 
   header .mobile ul {
@@ -112,10 +130,13 @@ header .mobile {
   }
 
   header .mobile .button {
-    padding: .1875rem .5rem;
+    padding: 0.1875rem 0.5rem;
     background-color: #9dc20b;
     line-height: 1.6;
     color: white;
+  }
+  nav a {
+    vertical-align: middle;
   }
 }
 
@@ -162,7 +183,7 @@ header .mobile {
 
 #sign-up-cta .striking {
   font-family: "Rubik", sans-serif;
-  padding-bottom: .75rem;
+  padding-bottom: 0.75rem;
 }
 
 #sign-up-cta .button {
@@ -170,7 +191,11 @@ header .mobile {
   padding: 1.25rem 7.25rem;
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (max-width: 760px) and (min-width:728px) {
+  .banner{
+    background-size:100% 100%;
+  }
+
   #sign-up-section {
     align-items: center;
     justify-content: center;
@@ -202,7 +227,7 @@ header .mobile {
   }
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 727px) {
   #sign-up-section {
     height: 20rem;
   }
@@ -220,7 +245,7 @@ header .mobile {
 
 #features-section {
   display: flex;
-  padding: 4rem ;
+  padding: 2.875rem;
   background-color: #f3f3f3;
 }
 
@@ -231,18 +256,16 @@ header .mobile {
   background-color: white;
 }
 
-.feature .image-container img{
+.feature .image-container img {
   width: 100%;
   height: 65%;
   margin: 0 auto;
-  padding: 0 !important;;
+  padding: 0 !important;
 }
-
-
 
 .feature h2 {
   margin-top: 2.5rem;
-  padding-bottom: .5rem;
+  padding-bottom: 0.5rem;
   font-size: 2.25rem;
   font-weight: bold;
   color: #4a4a4a;
@@ -263,7 +286,7 @@ header .mobile {
   }
 
   .feature h3 {
-    font-size: .875rem;
+    font-size: 0.875rem;
     line-height: 1.4;
   }
 }
@@ -288,7 +311,7 @@ header .mobile {
 }
 
 #filters-section .content {
-  padding: 0 .625rem;
+  padding: 0 0.625rem;
   margin-bottom: 5rem;
 }
 
@@ -306,8 +329,14 @@ header .mobile {
 }
 
 #filters-section .images-container {
+  display: grid;
   max-width: 100%;
   padding: 0 1%;
+  grid-template: 1fr / repeat(4, 1fr);
+}
+#filters-section .images-container img {
+  max-width: 100%;
+  height: auto;
 }
 
 @media only screen and (max-width: 760px) {
@@ -320,14 +349,14 @@ header .mobile {
   }
 
   #filters-section .content h2 {
-    padding-bottom: .625rem;
+    padding-bottom: 0.625rem;
     font-size: 1.125rem;
     line-height: 1.3;
     font-weight: normal;
   }
 
   #filters-section .content h3 {
-    font-size: .875rem;
+    font-size: 0.875rem;
     line-height: 1.4;
   }
 
@@ -346,11 +375,11 @@ header .mobile {
   background-color: #f3f3f3;
 }
 
-#quotes-section content {
+#quotes-section .content {
   padding: 5rem 0;
 }
 
-#quotes-section quote {
+#quotes-section .quote {
   padding-right: 1.875rem;
   font-family: "Palatino", serif;
   font-size: 1.875rem;
@@ -365,7 +394,7 @@ header .mobile {
 
 @media only screen and (max-width: 760px) {
   #quotes-section content {
-    padding: 1.875rem .625rem;
+    padding: 1.875rem 0.625rem;
   }
 
   #quotes-section quote {
@@ -384,13 +413,13 @@ header .mobile {
 
 footer {
   background-color: #9b9b9b;
-  padding: 1.5rem 2rem;
+  padding: 1.625em 2rem;
 }
 
 footer .content {
   color: white;
   display: flex;
-  font-size: .75rem;
+  font-size: 0.75rem;
 }
 
 footer .copyright {
@@ -399,6 +428,6 @@ footer .copyright {
 
 @media only screen and (min-width: 760px) {
   footer .content {
-    font-size: .625rem;
+    font-size: 0.625rem;
   }
 }
