--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -191,9 +191,9 @@ header .tablet {
   padding: 1.25rem 7.25rem;
 }
 
-@media only screen and (max-width: 760px) and (min-width:728px) {
-  .banner{
-    background-size:100% 100%;
+@media only screen and (max-width: 760px) and (min-width: 728px) {
+  .banner {
+    background-size: 100% 100%;
   }
 
   #sign-up-section {
@@ -228,6 +228,28 @@ header .tablet {
 }
 
 @media only screen and (max-width: 727px) {
+  .banner {
+    background-position: right;
+    background-size: auto 100%;
+    overflow: hidden;
+  }
+  #sign-up-cta {
+    position: static;
+    width: auto;
+    height: auto;
+    background-color: transparent;
+    border: none;
+    margin: auto;
+    padding: 0px;
+  }
+  #sign-up-cta .button {
+    margin-top: 1.625rem;
+    padding: 0;
+  }
+  #sign-up-cta .email {
+    display: none;
+  }
+
   #sign-up-section {
     height: 20rem;
   }
@@ -291,7 +313,7 @@ header .tablet {
   }
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (max-width: 728px) {
   #features-section {
     flex-flow: column;
     padding: 0;
@@ -299,7 +321,18 @@ header .tablet {
 
   .feature {
     margin: 0;
-    padding: 1.25rem 1rem 0 1rem;
+    padding: 1rem 1rem 0 1rem;
+  }
+  .feature h2 {
+    font-size: 1.125rem;
+    line-height: 1.3;
+    font-weight: normal;
+  }
+
+  .feature h3 {
+    font-size: 0.875rem;
+    line-height: 1.4;
+    padding-bottom: 1.875rem;
   }
 }
 
@@ -340,35 +373,53 @@ header .tablet {
 }
 
 @media only screen and (max-width: 760px) {
+ 
   #filters-section {
-    padding: 1.5rem 0 0 0;
+    padding: 4rem 0;
+    background-color: #4a4a4a;
   }
 
   #filters-section .content {
-    margin-bottom: 1rem;
+    margin-bottom: 4rem;
   }
 
+
+
+  #filters-section .images-container {
+    padding: 0;
+  }
+
+
+}
+@media only screen and (max-width: 728px) {
+
+  #filters-section {
+    padding: 1rem 0 0 0;
+    background-color: #4a4a4a;
+  }
+  #filters-section .images-container {
+    display: grid;
+    max-width: 100%;
+    padding: 0 1%;
+    grid-template: 1fr / repeat(3, 1fr);
+  }
+  #filters-section .extra {
+    display: none;
+  }
   #filters-section .content h2 {
     padding-bottom: 0.625rem;
     font-size: 1.125rem;
     line-height: 1.3;
     font-weight: normal;
   }
-
+  #filters-section .content {
+    margin-bottom: 1rem;
+  }
   #filters-section .content h3 {
     font-size: 0.875rem;
     line-height: 1.4;
   }
-
-  #filters-section .images-container {
-    padding: 0;
-  }
-
-  #filters-section .extra {
-    display: none;
-  }
 }
-
 /* Quotes Section */
 
 #quotes-section {
